<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background_color">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/logo_test" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/please_type_email_here_text"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/e_mail_hint_text"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@color/login_button_color"
            android:text="@string/send_email"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/back"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/back_to_login_page_text"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/loader"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible" />
</RelativeLayout>